# dependency-update-risk

./: .gitignore  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release-binaries.yml
scripts/: fetch_sample_cves.py
src/dep_risk/: __init__.py  cli.py  config.py  cve_resolver.py  llm_analyzer.py  models.py  release_notes.py
tests/: __init__.py  conftest.py  test_cli.py  test_cve_resolver.py  test_fuzz.py  test_llm_analyzer.py  test_models.py  test_release_notes.py
tests/data/: sample_cve_ids.txt  sample_cves.json
tests/integration/: test_sbom_ecosystem_coverage.py  test_scanner_integration.py
